fix screen overflow

--- a/src/sass/Components/_Main.scss
+++ b/src/sass/Components/_Main.scss
@@ -6,6 +6,12 @@
 }
 
 .screen {
+  & output {
+    min-height: 90px;
+    padding: 10px;
+    overflow-wrap: break-word;
+    line-height: 1.2;
+  }
   color: $theme-text;
   background-color: $theme-screen;
   max-width: 400px;
